fixed footer and aligned subtitle

--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,9 @@ html {
 #hero {
     background-image: url("../images/hero.png");
     background-size: cover;
-    min-height: 300px;
+    min-height: 400px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    height: 300px;
 }
